# Trabalho-embarcados

./: .gitignore  .gitmodules  README.md
Trabalho/.metadata/: .log4j2.xml  version.ini
Trabalho/documentacao/: .~lock.Passos para executar o agente do micros.docx#  Passos para executar o agente do micros.docx  Passos para integrar o micro-ROS a STM32CubeIDE.docx
Trabalho/gazebo_ros/: velocity:[700, 700, 700, 700]
Trabalho/gazebo_ros/install/: local_setup.sh  setup.sh
Trabalho/gazebo_ros/log/: latest_build
Trabalho/gazebo_ros/models/: quadcopter.sdf
Trabalho/microros_ros/: a.sh  base_functions.sh  criar_agente_microROS.sh  script_teste.sh  style.sh
Trabalho/microros_ros/.metadata/: .log4j2.xml  version.ini
Trabalho/microros_ros/build_no_terminal/: .cproject  .mxproject  .project  build_no_terminal.ioc
Trabalho/microros_ros/teste1/: .cproject  .project  (+2 more)
Trabalho/teste_gazebo/: CMakeLists.txt  brigde_launch.xml  building_robot.sdf  lidar_node.cpp  mundoaaa.sdf  my_actor.sdf  ros_gazebo.xml  sensor_launch.gzlaunch  sensors.sdf  spawn.launch  tutorial.sdf
Trabalho/teste_gazebo/treino/: CMakeLists.txt  drone_node.cpp  mundo.sdf
Trabalho/teste_gazebo/treino/X1/: model.config
Trabalho/teste_gazebo/treino/pasta_drone2/: CMakeLists.txt  motor_command.cpp  mundo.sdf  quadcopter.sdf
Trabalho/teste_gazebo/treino/pasta_drone2/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  motor_command
Trabalho/teste_gazebo/tutorial_ros/create_package/src/my_gazebo_package/: CMakeLists.txt
Trabalho/teste_gazebo/tutorial_ros/create_package/src/my_gazebo_package/src/: my_gazebo_node.cpp
Trabalho/teste_microRos/: .cproject  .project  teste_microRos.ioc
microros_ros/drone_eval_plat_RTOS/: .cproject  .gitignore  .mxproject  .project  README.md  drone_eval_plat_RTOS.ioc  drone_eval_plat_RTOS.launch
models/: quadcopter.sdf
scripts/: a.sh  base_functions.sh  extra_packages.repos  microROS_functions.sh  script_teste.sh  style.sh
(+539 files in other folders)
